qditp/deploy/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: itp
    project: itp
  name: itp
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: itp-gateway
    project: itp-gateway
  name: itp-gateway
