qditp/deploy/k8s/20-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account
  name: account-n4ba6-svc
  namespace: itp
spec:
  ports:
  - name: account-server
    nodePort: 30013
    port: 9098
    protocol: TCP
    targetPort: 9098
  selector:
    app: account
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alipay-account-server
  name: alipay-account-server-2n6kc-svc
  namespace: itp
spec:
  ports:
  - name: http-xud-port
    nodePort: 30021
    port: 30021
    protocol: TCP
    targetPort: 8080
  selector:
    app: alipay-account-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alipay-pay-sign-server
  name: alipay-pay-sign-server-t3o7n-svc
  namespace: itp
spec:
  ports:
  - name: http-kns-port
    nodePort: 30022
    port: 30022
    protocol: TCP
    targetPort: 8080
  selector:
    app: alipay-pay-sign-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blacklist-server
  name: blacklist-server-wmfzs-svc
  namespace: itp
spec:
  ports:
  - name: blacklist-server
    nodePort: 30017
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blacklist-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: card-pool-server
  name: card-pool-server-86mc1-svc
  namespace: itp
spec:
  ports:
  - name: http-vxj-port
    nodePort: 30033
    port: 30033
    protocol: TCP
    targetPort: 9111
  selector:
    app: card-pool-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collect-pay
  name: collect-pay-c23ku-svc
  namespace: itp
spec:
  ports:
  - name: http-dst-port
    nodePort: 30024
    port: 30024
    protocol: TCP
    targetPort: 8080
  selector:
    app: collect-pay
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daily-ticket-server
  name: daily-ticket-server-rdbe5-svc
  namespace: itp
spec:
  ports:
  - name: http-5q8-port
    nodePort: 30027
    port: 30027
    protocol: TCP
    targetPort: 9108
  selector:
    app: daily-ticket-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database-gcwp8-svc
  namespace: itp
spec:
  ports:
  - name: http-xvj-port
    nodePort: 30031
    port: 30031
    protocol: TCP
    targetPort: 8686
  selector:
    app: database
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: es-server
  name: es-server-38bzh-svc
  namespace: itp
spec:
  ports:
  - name: es-server
    nodePort: 30011
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: es-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: face-pay-server-svc
  name: face-pay-server-svc
  namespace: itp
spec:
  ports:
  - name: 30025-58101
    nodePort: 30025
    port: 30025
    protocol: TCP
    targetPort: 58101
  selector:
    app: face-pay-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fep-acc
  name: fep-acc-wracu-svc
  namespace: itp
spec:
  ports:
  - name: fep-acc
    nodePort: 30030
    port: 30030
    protocol: TCP
    targetPort: 9110
  selector:
    app: fep-acc
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fep-alipay
  name: fep-alipay-rec8g-svc
  namespace: itp
spec:
  ports:
  - name: http-58u-port
    nodePort: 30020
    port: 30020
    protocol: TCP
    targetPort: 8080
  selector:
    app: fep-alipay
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fep-app
  name: fep-app-hr32k-svc
  namespace: itp
spec:
  ports:
  - name: fep-app
    nodePort: 30010
    port: 9101
    protocol: TCP
    targetPort: 9101
  selector:
    app: fep-app
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fep-dev-server
  name: fep-dev-server-748lq-svc
  namespace: itp
spec:
  ports:
  - name: http-zqo-port
    nodePort: 30009
    port: 30009
    protocol: TCP
    targetPort: 8080
  selector:
    app: fep-dev-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gate-txn-pay-server
  name: gate-txn-pay-server-jomf4-svc
  namespace: itp
spec:
  ports:
  - name: http-u03-port
    nodePort: 30019
    port: 30019
    protocol: TCP
    targetPort: 8080
  selector:
    app: gate-txn-pay-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: industry-data-server
  name: industry-data-server-6dv5u-svc
  namespace: itp
spec:
  ports:
  - name: http-e6c-port
    nodePort: 30018
    port: 30018
    protocol: TCP
    targetPort: 8080
  selector:
    app: industry-data-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: key-server
  name: key-server-vcbmt-svc
  namespace: itp
spec:
  ports:
  - name: key-server
    nodePort: 30015
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: key-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: para-server
  name: para-server-pufrl-svc
  namespace: itp
spec:
  ports:
  - name: http-1rw-port
    nodePort: 30026
    port: 30026
    protocol: TCP
    targetPort: 8080
  selector:
    app: para-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pay-sign-server
  name: pay-sign-server-hsa9w-svc
  namespace: itp
spec:
  ports:
  - name: pay-sign-server
    nodePort: 30016
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pay-sign-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: recon-server
  name: recon-server-bjzdy-svc
  namespace: itp
spec:
  ports:
  - name: http-ea3-port
    nodePort: 30034
    port: 30034
    protocol: TCP
    targetPort: 9112
  selector:
    app: recon-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: security-server
  name: security-server-8h3eo-svc
  namespace: itp
spec:
  ports:
  - name: security-server
    nodePort: 30012
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: security-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ticket-server
  name: ticket-server-bsyju-svc
  namespace: itp
spec:
  ports:
  - name: ticket-server
    nodePort: 30014
    port: 9100
    protocol: TCP
    targetPort: 9100
  selector:
    app: ticket-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trans-query
  name: trans-query-57wpd-svc
  namespace: itp
spec:
  ports:
  - name: http-81f-port
    nodePort: 30035
    port: 30035
    protocol: TCP
    targetPort: 9113
  selector:
    app: trans-query
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: victoria-logs
  name: victoria-logs-pbi6a-svc
  namespace: itp
spec:
  ports:
  - name: http-ovy-port
    nodePort: 30032
    port: 30032
    protocol: TCP
    targetPort: 9428
  selector:
    app: victoria-logs
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web-3zilk-svc
  namespace: itp
spec:
  ports:
  - name: http-06k-port
    nodePort: 30029
    port: 30029
    protocol: TCP
    targetPort: 80
  selector:
    app: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-admin
  name: web-admin-4e2zf-svc
  namespace: itp
spec:
  ports:
  - name: http-lbj-port
    nodePort: 30028
    port: 30028
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-admin
  type: NodePort
